--- a/src/Notebook+-+CardioGood+Fitness+Data+Analysis.ipynb
+++ b/src/Notebook+-+CardioGood+Fitness+Data+Analysis.ipynb
@@ -1682,7 +1682,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1696,7 +1696,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2865573255bfeee324017040d81d7b6f965095dcaa7afc880a5e7f41df66a3c8"
+   }
   }
  },
  "nbformat": 4,
